[build-system]
requires      = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "smm-mcts"
version         = "0.1.0"
description     = "Simultaneous-Move MCTS for Code World Models with decoupled UCB and CMA-ES self-play"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
keywords        = ["mcts", "game-ai", "simultaneous-move", "cma-es", "reinforcement-learning"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "cma>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "matplotlib>=3.7",
]

[project.urls]
Homepage   = "https://github.com/ternary-ai/smm-mcts"
Repository = "https://github.com/ternary-ai/smm-mcts"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["smm*"]

[tool.setuptools.package-data]
smm = ["py.typed"]
